Refactor: move elements to the same structure as rings, plaits, etc.

--- a/ELEMENTS/library.properties
+++ b/ELEMENTS/library.properties
@@ -5,6 +5,7 @@ maintainer=Mark Washeim (blueprint@poetaster.de)
 sentence=A library port of the  audio production tools from MI ELEMENTS, 
 paragraph=Written in C++.
 category=Communication
-url=https://github.com/poetaster/mozzimi
+url=https://github.com/poetaster/arduinoMI
 architectures=*
 includes=ELEMENTS.h
+depends=STMLIB
