Add: code from ledlaux

--- a/PLAITS/library.properties
+++ b/PLAITS/library.properties
@@ -5,7 +5,7 @@ maintainer=Mark Washeim (blueprint@poetaster.de)
 sentence=A library port of the  audio production tools from MI Plaits, 
 paragraph=Written in C++.
 category=Communication
-url=https://github.com/poetaster/arduinoMI
+url=https://github.com/poetaster/mozzimi
 architectures=*
 includes=PLAITS.h
 depends=STMLIB
